add profile listing feature and fix the entire logic of the app